# NDKSample

./: build.gradle
app/: build.gradle
app/src/androidTest/java/tt/reducto/ndksample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: logutil.h
app/src/main/cpp/include/: BitmapTypes.h  StringOps.h
app/src/main/cpp/jni/: BitmapTypes.cpp  StringTypes.cpp  YuvTypes.cpp
app/src/main/java/tt/reducto/ndksample/: ExcTest.kt  JniArray.kt  MainActivity.kt
app/src/main/java/tt/reducto/ndksample/jni/: BaseOps.kt  BitmapOps.kt  NDKHandler.kt  StringTypeOps.kt  ThreadOps.kt  YUVOps.kt
app/src/main/java/tt/reducto/ndksample/ui/: BitmapOpsAty.kt  BitmapPool.kt
app/src/main/res/layout/: activity_bitmap.xml  activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/tt/reducto/ndksample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
